--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -13,5 +13,7 @@ optionSaveMonthly.text=Save monthly (before month starts)
 optionSaveYearly.text=Save yearly (before year starts)
 checkSaveBeforeMissions.text=Save before attempting a mission?
 labelSavedGamesCount.text=Maximum number of auto-saved games
+labelNewDay.text=New Day Options
+optionNewDayMRMS.text=Run Mass Repair/Mass Salvage on New Day
 labelXMLSave.text=Campaign XML Save Options
 optionWriteCustomsToXML.text=Write Custom Units to Campaign XML
