1986: Adding individual role filter and filtering by primary role options

--- a/MekHQ/resources/mekhq/resources/GUIEnums.properties
+++ b/MekHQ/resources/mekhq/resources/GUIEnums.properties
@@ -16,16 +16,36 @@ PersonnelFilter.ACTIVE=Active Personnel
 PersonnelFilter.COMBAT=Combat Personnel
 PersonnelFilter.SUPPORT=Support Personnel
 PersonnelFilter.MECHWARRIOR=MechWarriors
-PersonnelFilter.VEHICLE_CREW=Vehicle Crews
+PersonnelFilter.VEHICLE_CREWMEMBER=Vehicle Crews
+PersonnelFilter.GROUND_VEHICLE_DRIVER=Vehicle Drivers
+PersonnelFilter.NAVAL_VEHICLE_DRIVER=Naval Drivers
+PersonnelFilter.VEHICLE_GUNNER=Vehicle Gunners
+PersonnelFilter.VEHICLE_CREW=Vehicle Crew
+PersonnelFilter.VTOL_PILOT=VTOL Pilots
 PersonnelFilter.AEROSPACE_PILOT=Aerospace Pilots
 PersonnelFilter.CONVENTIONAL_AIRCRAFT_PILOT=Conventional Pilots
 PersonnelFilter.PROTOMECH_PILOT=ProtoMech Pilots
 PersonnelFilter.BATTLE_ARMOUR=Battle Armor Infantry
 PersonnelFilter.SOLDIER=Conventional Infantry
-PersonnelFilter.VESSEL_CREW=Large Vessel Crews
+PersonnelFilter.VESSEL_CREWMEMBER=Large Vessel Crews
+PersonnelFilter.VESSEL_PILOT=Vessel Pilots
+PersonnelFilter.VESSEL_CREW=Vessel Crew
+PersonnelFilter.VESSEL_GUNNER=Vessel Gunners
+PersonnelFilter.VESSEL_NAVIGATOR=Hyperspace Navigators
 PersonnelFilter.TECH=Techs
+PersonnelFilter.MECH_TECH=Mech Techs
+PersonnelFilter.MECHANIC=Mechanics
+PersonnelFilter.AERO_TECH=Aero Techs
+PersonnelFilter.BA_TECH=Battle Armour Techs
+PersonnelFilter.ASTECH=Astechs
 PersonnelFilter.MEDICAL=Medical Staff
+PersonnelFilter.DOCTOR=Doctors
+PersonnelFilter.MEDIC=Medics
 PersonnelFilter.ADMINISTRATOR=Administrators
+PersonnelFilter.ADMINISTRATOR_COMMAND=Administrators (Command)
+PersonnelFilter.ADMINISTRATOR_LOGISTICS=Administrators (Logistics)
+PersonnelFilter.ADMINISTRATOR_TRANSPORT=Administrators (Transport)
+PersonnelFilter.ADMINISTRATOR_HR=Administrators (HR)
 PersonnelFilter.DEPENDENT=Dependents
 PersonnelFilter.FOUNDER=Founders
 PersonnelFilter.PRISONER=Prisoners
