--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -5,6 +5,9 @@ labelDisplay.text=Display Options
 labelDisplayDateFormat.text=Display Date Format
 labelLongDisplayDateFormat.text=Long Display Date Format
 invalidDateFormat.error=Invalid Date Format
+labelPersonnelDisplay.text=Personnel Tab Display Options
+optionPersonnelIndividualRoleFilters.text=Use Individual Role Personnel Filters
+optionPersonnelFilterOnPrimaryRole.text=Filter Personnel Based On Primary Role
 labelSavedInfo.text=Auto save options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
