--- a/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
@@ -1,4 +1,24 @@
+# GM Tools Dialog Resource Strings
+# Dice Panel
+dicePanel.text=Dice Roller
+sides.text=d
+diceRoll.text=Roll
+diceResults.format=Result: %5d
 
+# RAT Panel
+ratPanel.text=RAT Roller
+yearLabel.text=Year
+factionLabel.text=Faction
+qualityLabel.text=Quality
+unitTypeLabel.text=Unit Type
+unitWeightLabel.text=Weight
+ratRoll.text=Roll For RAT
+addRandomUnit.text=Add Random Unit
+invalidYear.error=Please enter a valid year
+noValidUnit.error=No unit matching criteria and purchase restrictions.
+entityLoadFailure.error=Failed to load entity
+
+# Name Panel
 namePanel.text=Name Generator
 genderLabel.text=Gender
 originFactionLabel.text=Origin Faction
@@ -10,6 +30,7 @@ nameGeneratedLabel.text=Generated Name:
 generateNameButton.text=Generate Name
 assignNameButton.text=Assign Name
 
+# Callsign Panel
 currentCallsignLabel.text=Current Callsign:
 callsignGeneratedLabel.text=Generated Callsign:
 callsignPanel.text=Callsign Generator
