--- a/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/MekHqOptionsDialog.properties
@@ -1,13 +1,15 @@
 dialog.text=MekHQ Options
 okButton.text=Ok
 cancelButton.text=Cancel
+
 labelDisplay.text=Display Options
 labelDisplayDateFormat.text=Display Date Format
 labelLongDisplayDateFormat.text=Long Display Date Format
 invalidDateFormat.error=Invalid Date Format
 optionHistoricalDailyLog.text=Temporarily retain daily log history
 optionHistoricalDailyLog.toolTipText=Keeps a limited historical daily report in-memory during the gaming session. May result in increased memory usage.
-labelSavedInfo.text=Auto save options
+
+labelSavedInfo.text=Autosave options
 optionNoSave.text=Don't save periodically
 optionSaveDaily.text=Save daily (before day starts)
 optionSaveWeekly.text=Save weekly (before week starts)
@@ -15,9 +17,15 @@ optionSaveMonthly.text=Save monthly (before month starts)
 optionSaveYearly.text=Save yearly (before year starts)
 checkSaveBeforeMissions.text=Save before attempting a mission?
 labelSavedGamesCount.text=Maximum number of auto-saved games
+
 labelNewDay.text=New Day Options
 optionNewDayMRMS.text=Run Mass Repair/Mass Salvage on New Day
+
 labelXMLSave.text=Campaign XML Save Options
 optionPreferGzippedOutput.text=Prefer GZIP Campaign File Save Format
 optionPreferGzippedOutput.toolTipText=When selected MekHQ will save the campaign in compressed GZIP format instead of uncompressed CNPX when possible. This is highly recommended for larger campaigns.
 optionWriteCustomsToXML.text=Write Custom Units to Campaign XML
+
+labelMiscellaneous.text=Miscellaneous Options
+labelStartGameDelay.text=Delay Timer
+optionStartGameDelay.toolTipText=Number of milliseconds to wait before sending another unit. If the application tends to hang when starting a game in MegaMek or does not transfer all units or settings, try increasing this value.
