Swapping to LF instead of CRLF

--- a/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
@@ -36,3 +36,5 @@ callsignGeneratedLabel.text=Generated Callsign:
 callsignPanel.text=Callsign Generator
 generateCallsignButton.text=Generate Callsign
 assignCallsignButton.text=Assign Callsign
+
+# Bloodname Panel
