Adding code for a log entry when swapping TOE force.

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -110,6 +110,8 @@ useRandomHitsForVees.toolTipText=If checked, the number of hits that crews and i
 useTougherHealing.text=Tougher Healing
 useTougherHealing.toolTipText=The healing check will be penalized for every additional hit above 2.
 useTransfers.text=Log Saver - Use Reassign instead of Remove/Assign
+useExtendedTOEForceName.text=Use Extended TOE Force Names in Reassignment Log
+useExtendedTOEForceName.toolTipText=This options changes the Force Name used in the personnel reassignment log entry from 'Lance A' to 'My Campaign\\Lance A'
 useTimeInService.text=Track Time In Service
 timeInServiceDisplayFormat.text=Display format for Time in Service
 useTimeInRank.text=Track Time In Rank
