Adding resource strings and bugfixes from testing

--- a/MekHQ/resources/mekhq/resources/LogEntries.properties
+++ b/MekHQ/resources/mekhq/resources/LogEntries.properties
@@ -24,6 +24,9 @@ retiredDueToWounds.text=Retired from active duty due to {0} wounds
 assignedTo.text=Assigned to {0}
 reassignedTo.text=Reassigned to {0}
 removedFrom.text=Removed from {0}
+addToTOEForce.text=Added to {0}
+reassignedTOEForce.text=Reassigned from {0} to {1}
+removedFromTOEForce.text=Removed from {0}
 severedSpine.text=Severed {0} spine, leaving {1} paralyzed
 brokenRibPunctureDead.text=Had a broken rib puncturing {0} heart, dying
 brokenRibPuncture.text=Had a broken rib puncturing {0} lung
