Implementing manual unit rating modifier

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -61,6 +61,8 @@ damagedPartsValueJFormattedTextField.toolTipText=multiplier for value of used pa
 useEasierRefitCheckBox.toolTipText=Enables a non-canon faction modifier which: \nDecreases decreases refit/customization difficulty by 1; \nMultiplies refit/customization time by 0.5
 useEasierRefitCheckBox.text=Use easier refit
 useUnitRatingCheckBox.text=Use Unit Rating
+unitRatingMethodLabel.text=Unit Rating Method:
+manualUnitRatingModifierLabel.text=Manual Unit Rating Modifier
 repairSystemComboBox.toolTipText=Repair system
 repairSystemComboBoxLabel.text=Repair System
 repairSystem.WarchestCustom.lightDamageModifier=0.05
