Adding Bloodname GM Dialog

--- a/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
@@ -31,10 +31,20 @@ generateNameButton.text=Generate Name
 assignNameButton.text=Assign Name
 
 # Callsign Panel
+callsignPanel.text=Callsign Generator
 currentCallsignLabel.text=Current Callsign:
 callsignGeneratedLabel.text=Generated Callsign:
-callsignPanel.text=Callsign Generator
 generateCallsignButton.text=Generate Callsign
 assignCallsignButton.text=Assign Callsign
 
 # Bloodname Panel
+bloodnamePanel.text=Bloodname Generator
+originClanLabel.text=Clan
+bloodnameEraLabel.text=Year
+phenotypeLabel.text=Phenotype
+currentBloodnameLabel.text=Current Bloodname:
+bloodnameGeneratedLabel.text=Generated Bloodname:
+originClanGeneratedLabel.text=Generated Clan
+phenotypeGeneratedLabel.text=Generated Phenotype
+generateBloodnameButton.text=Generate Bloodname
+assignBloodnameButton.text=Assign Bloodname
