Implementing individual dice roll display in the GMTools Dialog

--- a/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/GMToolsDialog.properties
@@ -2,8 +2,10 @@
 # Dice Panel
 dicePanel.text=Dice Roller
 sides.text=d
+totalDiceResultsLabel.text=Result:
+totalDiceResult.text=%5d
 diceRoll.text=Roll
-diceResults.format=Result: %5d
+individualDiceResultsLabel.text=Individual Results:
 
 # RAT Panel
 ratPanel.text=RAT Roller
