297: Modular Prisoner Capture

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -91,11 +91,6 @@ useSupportEdgeBox.text=Use Edge for Non-Combat Personnel
 useSupportEdgeBox.toolTipText=Allow non-combat personnel to use edge
 useImplantsBox.text=Allow Implants
 useImplantsBox.toolTipText=Allow personnel to have implants (e.g. Manei Domini)
-chkCapturePrisoners.text=Capture Prisoners in Scenarios
-chkCapturePrisoners.toolTipText=If checked, you will have the opportunity to capture prisoners when resolving scenarios
-prisonerStatus.text=Default Prisoner Status
-prisonerBabyStatus.text=Babies Born to Prisoners Share Mother's Prisoner Status
-prisonerBabyStatus.toolTipText=If checked while Random Procreation is checked, Babies born to prisoners will share their mother's prisoner status. If it is not selected, they will instead be added to your force as a baby dependent.
 altQualityAveragingCheckBox.text=Use higher-precision skill level averaging
 altQualityAveragingCheckBox.toolTipText=Where quality is determined by two skills, attempt to average by number (e.g. 8/4), \nrather than product (e.g. Regular/Green), for more precision.
 useAdvancedMedicalBox.text=Use Advanced Medical Rules (Unofficial)
@@ -171,7 +166,18 @@ keepMarriedNameUponSpouseDeath.text=Keep Marital Name Upon Spouse Death
 
 #salary
 SalaryTab.text=Salary
+
+#prisoner
+panPrisoners.text=Prisoners
+prisonerCaptureStyle.text=Prisoner Capture Style
+prisonerStatus.text=Default Prisoner Status
+prisonerBabyStatus.text=Babies Born to Prisoners Share Mother's Prisoner Status
+prisonerBabyStatus.toolTipText=If checked while Random Procreation is checked, Babies born to prisoners will share their mother's prisoner status. If it is not selected, they will instead be added to your force as a baby dependent.
+chkAtBPrisonerDefection.text=Enable AtB Prisoner Defection
+chkAtBPrisonerDefection.toolTipText=This option adds a random roll to determine if a prisoner is willing to defect as per the AtB ruleset. This option will be ignored if Prisoner Defector is selected for the default prisoner status.
+chkAtBPrisonerRansom.text=Enable AtB Prisoner Ransom
 #end Personnel Tab
+
 useQuirksBox.text=Use Quirk
 useQuirksBox.toolTipText=Allow units to have StratOps quirks
 payForPartsBox.text=Pay For Parts
@@ -392,8 +398,6 @@ chkAeroRecruitsHaveUnits.text=Treat Aerospace pilots like MechWarriors
 chkAeroRecruitsHaveUnits.toolTipText=Aerospace pilot recruits can have fighters, and those that do will take a fighter with them when retiring/defecting.
 chkInstantUnitMarketDelivery.text=Instant delivery from unit market
 chkInstantUnitMarketDelivery.toolTipText=Units bought from the unit market appear in the hangar immediately rather than having to wait for delivery.
-chkUseAtBCapture.text=Random enemy capture
-chkUseAtBCapture.toolTipText=At the end of a battle, determine randomly which enemy personnel were captured and which escaped.
 chkContractMarketReportRefresh.text=Display a report when contract market refreshes
 chkUnitMarketReportRefresh.text=Display a report when unit market refreshes
 chkAssignPortraitOnRoleChange.text=Automatically assign portrait on role change
