Updating tool tip for Taharqa prisoner capture method

--- a/MekHQ/resources/mekhq/resources/Personnel.properties
+++ b/MekHQ/resources/mekhq/resources/Personnel.properties
@@ -238,7 +238,7 @@ PrisonerCaptureStyle.NONE.toolTipText=Prisoner Capture is disabled
 PrisonerCaptureStyle.ATB.text=Against the Bot
 PrisonerCaptureStyle.ATB.toolTipText=Determine randomly which enemy personnel were captured and which escaped based on the AtB rules at the end of a battle
 PrisonerCaptureStyle.TAHARQA.text=Taharqa
-PrisonerCaptureStyle.TAHARQA.toolTipText=You will have the opportunity to capture prisoners when resolving scenarios
+PrisonerCaptureStyle.TAHARQA.toolTipText=All potentially capturable enemy combatants will become prisoners when resolving scenarios.
 
 # PrisonerStatus Enum
 PrisonerStatus.FREE.text=Free
