Localizing the MRMS dialog

--- a/MekHQ/resources/mekhq/resources/MassRepair.properties
+++ b/MekHQ/resources/mekhq/resources/MassRepair.properties
@@ -1,15 +1,95 @@
+MassRepairMassSalvage.title=Mass Repair/Salvage
+MassRepair.title=Mass Repair
+
+UnitsPanel.title=Units
+btnSelectNone.text=Deselect All
+btnSelectNone.toolTipText=Deselect all units
+btnSelectAssigned.text=Select Active Units
+btnSelectAssigned.toolTipText=Select units with assigned pilots/crews
+btnSelectAssigned.format=Select Active Units ({0})
+btnSelectUnassigned.text=Select Inactive Units
+btnSelectUnassigned.toolTipText=Select units without assigned pilots/crews
+btnSelectUnassigned.format=Select Inactive Units ({0})
+btnHideUnits.Hide.text=Hide Unit List
+btnHideUnits.Hide.toolTipText=Hide units to save room on small screens
+btnHideUnits.Show.text=Show Unit List
+btnHideUnits.Show.toolTipText=Show list of units
+
+PartsPanel.title=Parts
+btnDeselectParts.text=Deselect All
+btnDeselectParts.toolTipText=Deselect all parts
+btnSelectAllParts.text=Select All
+btnSelectAllParts.toolTipText=Select all parts
+btnSelectAllParts.format=Select All ({0})
+btnHideParts.Hide.text=Hide Parts List
+btnHideParts.Hide.toolTipText=Hide parts to save room on small screens
+btnHideParts.Show.text=Show Parts List
+btnHideParts.Show.toolTipText=Show list of parts
+
+OptionsPanel.title=Options
 useExtraTimeBox.text=Use 'Extra Time' to reach min BTH for repairs/salvage
 useExtraTimeBox.toolTipText=When performing mass repair/salvage, apply 'Extra Time' to lower BTH to specified Min BTH
 useRushJobBox.text=Use 'Rush Job' to reach max BTH for repairs/salvage
 useRushJobBox.toolTipText=When performing mass repair/salvage, apply 'Rush Job' to raise BTH to specified Max BTH and save time
-allowCarryoverBox.text=Allow tasks to carry over to the next day(s) 
+allowCarryoverBox.text=Allow tasks to carry over to the next day(s)
 allowCarryoverBox.toolTipText=When performing mass repair/salvage, allow a technician to start a task that will not finish on that day
 scrapImpossibleBox.text=Scrap parts that are impossible for an elite technician to repair/salvage
 scrapImpossibleBox.toolTipText=When performing mass repair/salvage, if a part has been failed by an elite technician, scrap the part
 optimizeToCompleteTodayBox.text=Optimize technician selection to complete actions today
-optimizeToCompleteTodayBox.toolTipText=<html>When performing mass repair/salvage, seperate available techs into two groups:<br/>- [1] techs that can complete the action today<br/>- [2] techs that will complete the action beyond today.<br/>Prioritize techs that can complete the action today.</html>
+optimizeToCompleteTodayBox.toolTipText=<html>When performing mass repair/salvage, separate available techs into two groups:<br/>- [1] techs that can complete the action today<br/>- [2] techs that will complete the action beyond today.<br/>Prioritize techs that can complete the action today.</html>
 useAssignedTechsFirstBox.text=Prioritize actions to techs assigned to the unit/force
 useAssignedTechsFirstBox.toolTipText=<html>When performing mass repair/salvage, prioritize actions to techs that are assigned to the unit/force.<br/>This priority does not override the optimization logic for completing a repair today.<br/>If the assigned tech will complete the repair tomorrow and a different tech can complete today, the tech for today will be used.</html>
 replacePodPartsBox.text=Replace OmniPod parts when available
 replacePodPartsBox.toolTipText=Damaged pod-mounted parts will be replaced when possible instead of repairing in place
- 
+
+itemLabel.text=Item
+minSkillLabel.text=Min Skill
+maxSkillLabel.text=Max Skill
+minBTHLabel.text=Min BTH
+maxBTHLabel.text=Max BTH
+
+massRepairItemArmor.text=Repair/Salvage Armor
+massRepairItemArmor.toolTipText=Allow mass repair/salvage of armor
+massRepairItemAmmo.text=Repair/Salvage Ammo
+massRepairItemAmmo.toolTipText=Allow mass repair/salvage of ammo
+massRepairItemWeapons.text=Repair/Salvage Weapons
+massRepairItemWeapons.toolTipText=Allow mass repair/salvage of weapons
+massRepairItemLocations.text=Repair/Salvage Locations
+massRepairItemLocations.toolTipText=Allow mass repair/salvage of mek body parts and vehicle locations
+massRepairItemEngines.text=Repair/Salvage Engines
+massRepairItemEngines.toolTipText=Allow mass repair/salvage of engines
+massRepairItemGyros.text=Repair/Salvage Gyros
+massRepairItemGyros.toolTipText=Allow mass repair/salvage of gyros
+massRepairItemActuators.text=Repair/Salvage Actuators
+massRepairItemActuators.toolTipText=Allow mass repair/salvage of actuators
+massRepairItemHead.text=Repair/Salvage Cockpits/Sensors/Life Support
+massRepairItemHead.toolTipText=Allow mass repair/salvage of cockpits, life support, and sensors
+massRepairItemOther.text=Repair/Salvage Other
+massRepairItemOther.toolTipText=Allow mass repair/salvage of items which do not fall into the specific categories
+massRepairItemPod.text=Replace/Salvage OmniPod Equipment
+massRepairItemPod.toolTipText=All pod-mounted equipment will be replaced or salvaged regardless of other categories selected
+
+btnStart.MRMS.text=Start Mass Repair/Salvage
+btnStart.MR.text=Start Mass Repair
+btnSaveAsDefault.text=Save Options as Default
+btnClose.text=Done
+
+#Error Messages
+NoEnabledRepairOptions.errorTitle=No Repair Options Enabled
+NoEnabledRepairOptions.error=No repair options are currently enabled. Please activate at least one type of item to repair.
+NoSelectedUnit.errorTitle=No Unit Selected
+NoSelectedUnit.error=Can not start Mass Repair/Salvage if there are no selected units.
+NoUnits.errorTitle=No Valid Units Selected
+NoUnits.error=Can not start Mass Repair/Salvage with no valid units selected
+NoSelectedParts.errorTitle=No Parts Selected
+NoSelectedParts.error=Can not started Mass Repair if there are no selected parts.
+NoParts.errorTitle=No Valid Parts Selected
+NoParts.error=Can not start Mass Repair if there are no valid parts selected
+
+#Info Messages
+DefaultOptionsSaved.title=Default Options Saved
+DefaultOptionsSaved.text=Current settings saved as the default options
+Completed.title=Completed
+Completed.text=Mass Repair complete
+Completed.repairCount.text= - {0} repair action performed
+Completed.repairCountPlural.text= - {0} repair actions performed
