2079: Implementing bulk free

--- a/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/PersonnelTableMouseAdapter.properties
@@ -94,6 +94,7 @@ missileSpecialist.text=Missile Specialist
 no.text=No
 none.text=None
 numPersonnel.text=%d personnel
+numPrisoners.text=%d prisoners
 off.text=Off
 on.text=On
 rangemaster.text=Range Master
