--- a/MekHQ/resources/mekhq/resources/CampaignGUI.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignGUI.properties
@@ -216,9 +216,11 @@ lblPersonView.text=View:
 chkGroupByUnit.text=Group by Unit
 chkGroupByUnit.toolTipText=Displays personnel grouped by their unit (i.e. the commanding officer is shown, and all other crew or soldiers are hidden).
 txtDesc.contentType=text/html
-#NOI18N
 txtDesc.font=Monospaced-Plain-12
 lblUnitChoice.text=Unit Type:
+choiceUnit.ActiveUnits.filter=All Active Units
+choiceUnit.MothballedUnits.filter=All Mothballed Units
+choiceUnit.UnmaintainedUnits.filter=All Unmaintained Units
 lblUnitView.text=View:
 btnAddMission.toolTipText=Add a new mission. Missions are long-term assignments consisting of multiple scenarios.
 btnAddMission.text=Add Mission
