--- a/MekHQ/resources/mekhq/resources/UnitTableMouseAdapter.properties
+++ b/MekHQ/resources/mekhq/resources/UnitTableMouseAdapter.properties
@@ -1,3 +1,5 @@
 confirmRemove.format=Do you really want to remove %s?
 deleteUnitsCount.text=%d units
 removeQ.text=Remove?
+hireMinimumComplement.text=Hire minimum complement
+addMinimumComplement.text=Add minimum complement
