Fixing Baby Surname Style Text

--- a/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
+++ b/MekHQ/resources/mekhq/resources/CampaignOptionsDialog.properties
@@ -152,7 +152,7 @@ chanceProcreationNoRelationship.toolTipText=This is the percent chance per day t
 displayTrueDueDate.text=Display True Due Date
 displayTrueDueDate.toolTipText=This displays the actual date the baby will be delivered on the mother's personnel sheet instead of an estimated due date.
 logConception.text=Log Conception and Birth in Personnel and Medical Logs
-babySurnameStyle.text=Baby Surname Style:
+babySurnameStyle.text=Baby Surname Style
 babySurnameStyle.toolTipText=This is the style for how a baby's surname will be selected.
 determineFatherAtBirth.text=Determine Father at Birth instead of Conception
 determineFatherAtBirth.toolTipText=<html>The father of a child will be determined based on the spouse at the birth of the child, followed by the spouse at time of conception, followed by nobody. <br>This is opposed to just using the spouse, if any, at the time of conception.</html>
