--- a/MekHQ/resources/mekhq/resources/MassRepair.properties
+++ b/MekHQ/resources/mekhq/resources/MassRepair.properties
@@ -1,3 +1,16 @@
+#Generic
+Salvage=Salvage
+Repair=Repair
+
+#MassRepairService
+##Campaign Reports
+MRMS.StartWarehouse.report=Beginning mass warehouse repair.
+MRMS.NoAvailableTechs.report=No available techs to repairs parts.
+MRMS.CompleteDisabled.report=Mass Repair/Salvage complete. The service is disabled.
+MRMS.CompleteTypeDisabled.report=Mass Repair/Salvage complete. The service is disabled for %s.
+MRMS.CompleteNoUnits.report=Mass Repair/Salvage complete. There were no units worked on.
+
+##MassRepairSalvageDialog
 MassRepairMassSalvage.title=Mass Repair/Salvage
 MassRepair.title=Mass Repair
 
@@ -27,6 +40,10 @@ btnHideParts.Show.text=Show Parts List
 btnHideParts.Show.toolTipText=Show list of parts
 
 OptionsPanel.title=Options
+useRepairBox.text=Use Repair
+useRepairBox.toolTipText=Enables the repair functionality of mass repair/salvage
+useSalvageBox.text=Use Salvage
+useSalvageBox.toolTipText=Enables the salvage functionality of mass repair/salvage
 useExtraTimeBox.text=Use 'Extra Time' to reach min BTH for repairs/salvage
 useExtraTimeBox.toolTipText=When performing mass repair/salvage, apply 'Extra Time' to lower BTH to specified Min BTH
 useRushJobBox.text=Use 'Rush Job' to reach max BTH for repairs/salvage
@@ -75,6 +92,8 @@ btnSaveAsDefault.text=Save Options as Default
 btnClose.text=Done
 
 #Error Messages
+MRMSDisabled.errorTitle=Mass Repair/Salvage Disabled
+MRMSDisabled.error=Mass Repair/Salvage is currently disabled. Enable Use Repair or Use Salvage to run.
 NoEnabledRepairOptions.errorTitle=No Repair Options Enabled
 NoEnabledRepairOptions.error=No repair options are currently enabled. Please activate at least one type of item to repair.
 NoSelectedUnit.errorTitle=No Unit Selected
