Implementing formatting fixes

--- a/MekHQ/resources/mekhq/resources/Parts.properties
+++ b/MekHQ/resources/mekhq/resources/Parts.properties
@@ -2,6 +2,10 @@
 
 ## General Parts Resources
 
+## Classes
+# MissingMekSensor
+MissingMekSensor.title=Mech Sensors
+
 ## Enums
 # PartRepairType Enum
 PartRepairType.ARMOR.text=Armor
